--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "name": "scolastiche",
   "version": "1.0.0",
-  "license": "MIT",
+  "private": true,
   "scripts": {
+    "dev": "quizms dev",
     "fmt": "prettier --write ."
   },
   "dependencies": {
     "@mdx-js/react": "^2.3",
+    "@tailwindcss/typography": "^0.5.10",
+    "autoprefixer": "^10.4.16",
+    "daisyui": "^3.7.7",
     "lodash": "^4.17.21",
+    "postcss": "^8.4.30",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.3"
   },
   "prettier": {
     "trailingComma": "all",
