--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mdx-js/react": "^2.3",
     "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.16",
+    "cookie": "^0.6.0",
     "daisyui": "^3.7.7",
     "postcss": "^8.4.30",
     "react": "^18.2.0",
