--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mdx-js/react": "^3.0",
     "@olinfo/quizms": "^1.0.0-beta.1",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/react": "^18",
     "autoprefixer": "^10.4.16",
     "cookie": "^0.6.0",
     "daisyui": "^4.5",
