--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^10.4.16",
     "cookie": "^0.6.0",
     "daisyui": "^4.5",
+    "jwt-decode": "^4.0.0",
     "postcss": "^8.4.30",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
