--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
+      
+      - name: Setup package registry
+        run: |
+          npm config set @olinfo:registry https://git.olinfo.it/api/packages/bortoz/npm/
+          npm config set -- '//git.olinfo.it/api/packages/bortoz/npm/:_authToken' "${{ secrets.GITEA_TOKEN }}"
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
