--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "postinstall": "playwright install",
+    "postinstall": "playwright install chromium",
     "dev": "quizms dev",
     "fmt": "prettier --write .",
     "build": "quizms build --training"
   },
   "dependencies": {
     "@mdx-js/react": "^3.0",
-    "@olinfo/quizms": "^1.0.0-beta.2",
+    "@olinfo/quizms": "^1.0.0-beta.3",
     "@tailwindcss/typography": "^0.5.10",
     "@types/react": "^18",
     "autoprefixer": "^10.4.16",
