--- a/src/fibonacci-primarie/2023-seconda-fase-demo/contest/s-2-alza-torre/customBlocks.yaml
+++ b/src/fibonacci-primarie/2023-seconda-fase-demo/contest/s-2-alza-torre/customBlocks.yaml
@@ -20,13 +20,13 @@
   helpUrl: ""
   js:
     - |-
-      ((function(i) {
+      (function(i) {
         if (i === undefined) exit(false, "l'argomento del blocco non ha un valore");
         if (i < 1 || i > hiddenState.N)
           exit(false, "la scatola " + i + " non esiste");
         hiddenState.pos = i-1;
         return hiddenState.rot[i-1] ? hiddenState.larghezze[i-1] : hiddenState.altezze[i-1];
-      })(%0))
+      })(%0)
     - ORDER_FUNCTION_CALL
 
 - type: larghezza della scatola
@@ -42,13 +42,13 @@
   helpUrl: ""
   js:
     - |-
-      ((function(i) {
+      (function(i) {
         if (i === undefined) exit(false, "l'argomento del blocco non ha un valore");
         if (i < 1 || i > hiddenState.N)
           exit(false, "la scatola " + i + " non esiste");
         hiddenState.pos = i-1;
         return hiddenState.rot[i-1] ? hiddenState.altezze[i-1] : hiddenState.larghezze[i-1];
-      })(%0))
+      })(%0)
     - ORDER_FUNCTION_CALL
 
 - type: ruota la scatola
