--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@mdx-js/react": "^3.0",
     "@olinfo/quizms": "^1.0",
+    "@olinfo/react-components": "^0.3",
     "@olinfo/tailwind": "^0.1",
     "@types/react": "^18",
     "autoprefixer": "^10.4",
+    "clsx": "^2.1",
     "cookie": "^0.6",
+    "date-fns": "^3.6",
     "jwt-decode": "^4.0",
     "lodash-es": "^4.17",
+    "lucide-react": ">=0.395, <1",
     "postcss": "^8.4",
     "react": "^18.2",
     "react-dom": "^18.2"
