--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "lucide-react": ">=0.395, <1",
     "postcss": "^8.4",
     "react": "^18.2",
-    "react-dom": "^18.2"
+    "react-dom": "^18.2",
+    "wouter": "^3.1.3"
   },
   "devDependencies": {
     "@olinfo/eslint": "^0.2.0",
