--- a/src/fibonacci-secondarie/2023-terza-fase/contest/s-2-montagna/s2.blocks.yaml
+++ b/src/fibonacci-secondarie/2023-terza-fase/contest/s-2-montagna/s2.blocks.yaml
@@ -13,9 +13,7 @@
   colour: 20
   tooltip: numero di colonnine lungo il percorso
   helpUrl: ""
-  js:
-    - hiddenState.N
-    - ORDER_MEMBER
+  js: hiddenState.N
 
 - type: energia
   message0: energia
@@ -23,30 +21,25 @@
   colour: 20
   tooltip: energia rimasta
   helpUrl: ""
-  js:
-    - hiddenState.energy
-    - ORDER_MEMBER
+  js: hiddenState.energy
 
 - type: altitudine della colonnina
   message0: altitudine della colonnina %1
   args0:
     - type: input_value
-      name: LENGTH
       value: 0
       check: Number
   output: Number
   colour: 20
   tooltip: altitudine della colonnina i-esima
   helpUrl: ""
-  js:
-    - |-
-      (function(i) {
-        if (i === undefined) exit(false, "l'argomento del blocco non ha un valore");
-        if (i < 1 || i > hiddenState.N || Math.floor(i) != i)
-          exit(false, "la colonnina " + i + " non esiste");
-        return hiddenState.H[i-1];
-      })(%0)
-    - ORDER_FUNCTION_CALL
+  js: |
+    (function(i) {
+      if (i === undefined) exit(false, "l'argomento del blocco non ha un valore");
+      if (i < 1 || i > hiddenState.N || Math.floor(i) != i)
+        exit(false, "la colonnina " + i + " non esiste");
+      return hiddenState.H[i-1];
+    })(%0)
 
 - type: avanza
   message0: avanza
@@ -84,7 +77,6 @@
   message0: ricarica per %1 minuti
   args0:
     - type: input_value
-      name: LENGTH
       value: 0
       check: Number
   previousStatement: null
@@ -92,7 +84,7 @@
   colour: 20
   tooltip: ricarica per x minuti
   helpUrl: ""
-  js: |-
+  js: |
     (function(i) {
       if (i === undefined) exit(false, "l'argomento del blocco non ha un valore");
       if (i < 0 || i > 1000000 || Math.floor(i) != i)
